--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-@import "tailwindcss";
+@import "tailwindcss/index.css";
 
 :root {
   --background: #ffffff;
@@ -20,7 +20,12 @@
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  @apply bg-neutral-900 text-neutral-100;
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+
+a {
+  @apply text-pink-500;
 }
