--- a/src/app/clicker/ClickerPage.css
+++ b/src/app/clicker/ClickerPage.css
@@ -18,7 +18,7 @@ body {
   position: relative;
   width: 100%;
   height: 100vh;
-  background-color: #fff;
+  background-color: #ececec;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -35,7 +35,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #f5f5f5;
+  background-color: #ececec;
   padding: 1rem;
   border-bottom: 1px solid #e0e0e0;
 }
@@ -54,10 +54,12 @@ body {
 
 /* Card styling */
 .clicker-card {
-  background-color: #ffebee;
+  background-color: #fafafa;
   margin: 1rem;
   border-radius: 8px;
   padding: 1.5rem;
+  padding-top: 4rem;
+  padding-bottom: 4rem;
   text-align: center;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
@@ -84,7 +86,7 @@ body {
   background-color: #d32f2f;
   color: #fff;
   font-size: 0.95rem;
-  padding: 0.8rem;
+  padding: 2rem;
   border: none;
   border-radius: 6px;
   cursor: pointer;
@@ -98,6 +100,12 @@ body {
 .clicker-button:disabled {
   background-color: #aaa;
   cursor: not-allowed;
+}
+
+.overlay-button {
+    margin-top: 2rem;
+    width: 80%;
+    padding: 1.5rem;
 }
 
 /* Message feedback */
@@ -183,7 +191,7 @@ body {
 }
 
 .overlay-message {
-  font-size: 1.2rem;
+  font-size: 3rem;
   font-weight: 700;
   color: #d32f2f;
   text-align: center;
