--- a/src/app/offer/store.css
+++ b/src/app/offer/store.css
@@ -45,7 +45,8 @@
 .products-grid {
   display: grid;
   gap: 1rem;
-  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  justify-content: center;
+  grid-template-columns: repeat(auto-fill, 150px);
   margin-bottom: 1rem;
 }
 
