--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,6 +62,7 @@ body {
 }
 
 .top-bar-left h1 {
+  margin-top: 5px;
   font-size: 1.2rem;
   font-weight: 700;
   color: #000; /* Darker text for headline */
